# ballistic-calculator

./: .gitignore  DOCKER-DEV-WORKFLOW.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  start-dev.bat  start-dev.sh  start-docker.bat  todo.md
.github/workflows/: ci-cd.yml.disabled
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  debug_import.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/app/models/: __init__.py
backend/app/routers/: ballistics.py  health.py
backend/app/services/: ballistics.py
backend/tests/: test_api.py
docs/: js-ballistics-migration.md
frontend/: Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BallisticsCalculator.tsx  theme-toggle.tsx
frontend/src/hooks/: useBallisticsCalculator.ts
frontend/src/lib/: ballistics.ts
scripts/: README.md
scripts/deploy/unix/: build.sh
scripts/deploy/windows/: build.bat
scripts/dev/unix/: clean.sh  logs.sh  restart.sh  start.sh  stop.sh
scripts/dev/windows/: clean.bat  logs.bat  restart.bat  start.bat  stop.bat
scripts/prod/unix/: start.sh
scripts/prod/windows/: start.bat
